--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* Fonts */
+
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Merriweather:wght@300;400;700;900&family=Montserrat:ital,wght@0,400;0,500;0,700;1,400&display=swap');
 * {
     margin: 0;
@@ -13,7 +15,7 @@
 }
 
 
-/* Image part */
+/* Coluna esquerda */
 
 .image-div {
     width: 50%;
@@ -96,7 +98,7 @@
 }
 
 
-/* Login Content */
+/* Coluna direita */
 
 .login-div {
     display: flex;
